--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # Site-wide settings
 # ------------------
+title: My Blog
 #
-# title: Your awesome title
-#
-# author:
-#   name: GitHub User
-#   email: your-email@domain.com
+author:
+   name: West Boudreaux
+   email: boudreauxwh@hendrix.edu
 #
 # The `>` after `description:` means to ignore line-breaks until next key. If
 #   you wish to omit the line-break after the end of text, use `>-` instead.
-# description: >
+description: A totaly awesome account of all the things I have done in my database and web systems class.
+
+
 #   Write an awesome description for your new site here. You can edit this line
 #   in _config.yml. It will appear in your document head meta (for Google search
 #   results) and in your feed.xml site description.
